hphp/test/slow/ext_functioncredential/global_constant_error.php.expectf
Fatal error: Invalid expression in constant initializer in %s/test/slow/ext_functioncredential/global_constant_error.php on line 3
